# vindex

./: .gitignore  AGENT_RULES.md  ARCHITECTURE.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  GLOSSARY.md  LICENSE  PROJECT_CONSTRAINTS.md  PROJECT_STATE.md  README.md  ROADMAP.md  SCHEMA_VERSIONING.md  TECH_STACK.md  VISION.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: AGENT_RULES.md  cli.md  compiler.md  contributing.md  evaluation.md  index.md  narration.md  plugins.md
docs/extractors/: asr.md  frame_extraction.md  ocr.md  scene_detection.md  vlm_caption.md
eval/golden/fixture_001/: metadata.json
eval/golden/fixture_002/: metadata.json
tests/: test_e2e_heavy.py  test_initial.py
tests/api/: test_api.py
tests/cli/: test_cli.py
tests/compiler/: test_assembler.py  test_event_deriver.py  test_pipeline.py  test_relationship_resolver.py  test_scene_grouper.py  test_scheduler.py  test_shot_assembler.py  test_timeline_constructor.py
tests/core/: test_cache.py  test_plugins.py  test_schemas.py
tests/evaluation/: test_evaluator.py
tests/extractors/: test_asr.py  test_frame_extraction.py  test_object_motion.py  test_ocr.py  test_scene_detection.py  test_vlm_caption.py
tests/narration/: test_narrator.py
vindex/: __init__.py
vindex/api/: __init__.py  app.py
vindex/cli/: main.py
vindex/compiler/: __init__.py  assembler.py  event_deriver.py  pipeline.py  relationship_resolver.py  scene_grouper.py  scheduler.py  shot_assembler.py  timeline_constructor.py
vindex/core/: cache.py  plugins.py
vindex/evaluation/: evaluator.py
vindex/narration/: narrator.py
website/: index.html  script.js  style.css
(+43 files in other folders)
